BeLL Apps 0.11.25
-----------------------
- Fixed the Cumulative Registered Members Count in Trend Activity Report

BeLL Apps 0.11.24
-----------------------
- Added community-wise trend activity report generation at nation BeLL.
- Fixed some bugs related to trend activity reporting.

BeLL Apps 0.11.21
-----------------------
- This to test that the Dadaab communities can receive app updates.

BeLL Apps 0.11.20
-----------------------
- This is just a test

BeLL Apps v0.11.19
-----------------------
- This is just a test

BeLL Apps v0.11.16
-----------------------
- This is an other test

BeLL Apps v0.11.15
-----------------------
- This is an other test

BeLL Apps v0.11.14
-----------------------
- This is a test

BeLL Apps v0.11.13
-----------------------
- Added CHANGELOG.txt so we can quickly see that code was updated on Community BeLLs