@@ -14,8 +14,6 @@ $(function () {
                 model: this.model
             })
             this.$el.append(this.form.render().el);
-//            this.form.fields['nationName'].$el.hide();
-//            this.form.fields['nationUrl'].$el.hide();
             this.$el.append('<a style="margin-left:2px" class="btn btn-success" id="formButton">Submit Configurations </a>');
         },
         setForm:function(){
@@ -33,26 +31,10 @@ $(function () {
             con.set('code',Config.get('code'));
             con.set('type',Config.get('type'));
             con.set('notes',Config.get('notes'));
-//            con.set('currentLanguage',Config.get('availableLanguages'));
             con.save(null,{ success: function(doc,rev){
+                App.configuration = con;
                 alert('Configurations are Successfully Added');
                 Backbone.history.navigate('dashboard', {trigger: true});
-//                var member = new App.Models.Member({"_id": $.cookie('Member._id')});
-//                member.fetch({async: false,
-//                    success: function () {
-//                        if ((member.get('login') === "admin") && (member.get('password') === 'password')) {
-//                            alert("Please change the password for this admin account for better security of the account and the application.");
-//                            Backbone.history.navigate('member/edit/' + member.get('_id'), {trigger: true});
-//                        } else {
-//                            Backbone.history.navigate('dashboard', {trigger: true});
-//                            location.reload();
-//                        }
-//                    },
-//                    error: function() {
-//                        Backbone.history.navigate('dashboard', {trigger: true});
-//                        location.reload();
-//                    }
-//                });
             }});
     	    	
 
