@@ -20,7 +20,7 @@ $(function () {
                 
                // <input type="checkbox" value="Resources" name="syncData">Resources<br>
                //<input type="checkbox" value="Application" name="syncData" >Application<br><br><br>
-                var $button = $('<h6>Select Item(\'s) To Sync</h6><br><br><input type="checkbox" value="ActivityReports" name="syncData">Log Activity Reports<br><input type="checkbox" value="Reports" name="syncData">Reports<br>')
+                var $button = $('<h6>Select Item(\'s) To Sync</h6><br><br><input type="checkbox" value="ActivityReports" name="syncData">Log Activity Reports<br><input type="checkbox" value="Reports" name="syncData">Reports<br><input type="checkbox" value="Feedbacks" name="syncData">Feedbacks<br>')
                 
                 this.$el.append($button)
                 this.$el.append('<button class="btn btn-info" id="selectAll" style="width:110px">Select All</button><button style="margin-left:10px; width:110px" class="btn btn-success" id="formButton" style="width:110px">Send</button>')
@@ -56,6 +56,9 @@ $(function () {
 					else if($(this).val()=='Reports'){
 						context.syncReports()
 					}
+                    else if($(this).val()=='Feedbacks'){
+                        context.syncFeedbacks()
+                    }
 					if ($(this).val()=='Application'){
 						context.checkAvailableUpdates()
 					}
@@ -214,6 +217,39 @@ $(function () {
 							})
 					 
 				 }})
+
+
+        },
+
+        syncFeedbacks:function(){
+            var configurationModel=new App.Collections.Configurations()
+            configurationModel.fetch({success:function(res){
+
+                var conf=res.first()
+                console.log(conf)
+                var nationName=conf.get('nationName')
+                var nationURL=conf.get('nationUrl')
+                $.ajax({
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json; charset=utf-8'
+                    },
+                    type: 'POST',
+                    url: '/_replicate',
+                    dataType: 'json',
+                    data: JSON.stringify({
+                        "source": "feedback",
+                        "target": 'http://'+ nationName +':'+App.password+'@'+ nationURL + '/feedback'
+                    }),
+                    success: function (response) {
+                        alert("Successfully Replicated Feedbacks")
+                    },
+                    error: function(XMLHttpRequest, textStatus, errorThrown) {
+                        alert("Error (Try Later)")
+                    }
+                })
+
+            }})
 
 
         },
