@@ -1,6 +1,9 @@
 BeLL Apps 0.11.25
 -----------------------
 - Fixed the Cumulative Registered Members Count in Trend Activity Report
+- Fixed the Bug of Logging New Member Signups
+- Added communityCode in Feedbacks so that they can be identified at nation-bell
+- Added Syncing of Feedbacks at nation-bell
 
 BeLL Apps 0.11.24
 -----------------------
